--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,14 @@
     <link rel="manifest" href="/manifest.json" />
     <title>Stellar Disbursement Platform</title>
     <script src="/settings/env-config.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight&family=Inter:wght@400;500;600&family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
